--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,8 @@
-baseURL = 'http://example.org/'
+baseURL = 'https://intohuman.com/'
 title = 'IntoHuman'
 languageCode = 'tr-TR'
 theme = 'hextra'
+enableRobotsTXT = true
 
 # Build ayarları
 [build]
@@ -52,8 +53,18 @@ theme = 'hextra'
 
 # Tema parametreleri
 [params]
-  description = "Benim harika sitem"
-  
+  description = "IntoHuman, markaların strateji, pazarlama ve satış psikolojisi alanlarında büyümesine yardımcı olan içerikler ve çözümler sunar."
+  keywords = ["pazarlama", "marka stratejisi", "markalaşma", "satış psikolojisi", "Intohuman"]
+  ogImage = "/images/logo.svg"
+
+  [params.seo]
+    defaultImage = "/images/logo.svg"
+    twitterHandle = ""
+    organization = "IntoHuman"
+
+  [params.author]
+    name = "IntoHuman"
+
   [params.navbar]
     displayTitle = true
     displayLogo = false
@@ -116,6 +127,11 @@ theme = 'hextra'
 [outputFormats.webp]
   name = "webp"
   mediaType = "image/webp"
+
+[sitemap]
+  changefreq = "weekly"
+  filename = "sitemap.xml"
+  priority = 0.5
 
 [cascade]
 toc = false
